--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ main{
     height:  100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center
 }
 .game-board {
     display: grid;
